
* Added `graphite` module with helpers allowing to generate graphite metrics
  for counters and timeseries (#1461).

* Added Basic Auth and API key authentication to HttpListenInput (#1533).

* Added SSL/TLS support to HttpListenInput (#1534)

* Allow to overwrite ContainerName using a Container environment variable from
  within the Docker container for the DockerLogInput. (#1545)

Bug Handling
------------

* Fixed visibility of synchronous decoders in reports (#1312).

* Fixed hang on SandboxFilter termination (#1509)

* More ProcessInput/ProcessDirectoryInput retry logic fixes (#1412 & #1418).

* ProcessInput fixed to no longer leak decoder goroutines when reconfigured
  via ProcessDirectoryInput-driven config changes (#1444).

* Check configuration, ticker_interval in Stat Accumulator Input  must be
  greater than 0 (#1474).

* Switch from unmaintained `crowdmob` fork of GoAMZ dependency to `AdRoll`
  (#1458).

* Added ability to reconnect after lost connection in `heka-flood` (#1536).

* Respect ElasticSearch URL path (#1558).

0.9.3 (2015-??-??)
==================

Bug Handling
------------

* Correctly honor "user-agent" heading config in HttpInput (#1520).

* Removed state from PluginMaker to remove race conditions during plugin
  construction (#1532).

* Get decoder lock before cleaning up decoders during pipeline shutdown to
  avoid race condition panics during exit (#1531).

0.9.2 (2015-04-22)
==================

Bug Handling
------------

* Added bounds check for truncated inputs lines to StatsdInput.

* Fixed ElasticSearch recovery after full queue when `queue_full_action` is
  set to "drop" or "block".

* Fixed TcpOutput recovery after full queue when `queue_full_action` is set to
  "drop" or "block" (#1484).

* Fixed bug where LogstreamerInput wasn't honoring `oldest_duration` setting
  (#1437).

* ElasticSearch payload encoder will ensure there is a newline in the
  end of the payload in order for the bulk API to work correctly (#1457).
